# Compare

./: .gitignore  README.md  justfile
doc/: Project.md
source/+doc/: design.md  ocaml-style.md  parallelism.md
source/C++/: perms.cpp  run  v2-perms.cpp  v3-perms.cpp  v4-perms.cpp
source/C++/src/: answers.hpp  loops.hpp  parallel.hpp  perms.cpp  tarjan.hpp  worker.hpp
source/F#/: Directory.Build.props  F#.fsproj  run
source/F#/src/: answers.fs  loops.fs  parallel.fs  perms.fs  tarjan.fs
source/chez/: build.ss  run
source/chez/src/: answers.ss  loops.ss  parallel.ss  perms.ss  tarjan.ss
source/clojure/: deps.edn  run
source/clojure/.cpcache/: 1300499943.basis  1300499943.cp  1300499943.jvm
source/clojure/src/: answers.clj  loops.clj  parallel.clj  perms.clj  tarjan.clj  worker.clj
source/haskell/: cabal-bug.txt  fourmolu.yaml  perms.cabal  run
source/haskell/src/: Answers.hs  Begin.hs  Loops.hs  Parallel.hs  Perms.hs  Tarjan.hs  Worker.hs
source/haskell/src-atomic/: Parallel.hs  Perms.hs
source/julia/: julia-runner  run  timings.txt
source/julia/src/: answers.jl  loops.jl  perms.jl  tarjan.jl
source/kotlin/: run
source/kotlin/kotlin-native/: Parallel.kt  perms.kexe  run
source/kotlin/src/: Answers.kt  Loops.kt  (+4 more)
source/lean/: Loops.lean  Tarjan.lean  lake-manifest.json  lakefile.lean  run
source/nim/: run  test_perms
source/ocaml/: .ocamlformat  dune  run  style.md
source/ruby/: counts.rb  perms.rb  run
source/rust/: Cargo.toml  perms.rs  run
source/scala/: run
source/swift/: Format.swift  Original.swift  Package.swift  run
(+33 files in other folders)
