cabal-version: 2.4
name:          perms
version:       0.1.0.0

executable perms
  main-is:        Perms.hs
  hs-source-dirs: src
  other-modules:  Answers, Loops, Parallel, Tarjan, Worker
  build-depends:  base, parallel, vector
  ghc-options:    -O2 -threaded -rtsopts
  default-language: Haskell2010
